--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,7 @@ jobs:
     
     steps:
     - name: checkout
-      uses: checkout@v3
+      uses: actions/checkout@v3
     
     - name: Build a *formatter* library
       run: |
