--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,11 +16,17 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
+      
+    - name: Creating directory for future compiled artefacts
+      run: |
+      	mkdir artifacts
     
     - name: Build a *formatter* library
       run: |
         cmake -H. -B_build
         cmake --build _build
+		mv _build formatter_lib_build
+        mv formatter_lib_build ../artifacts
       shell: bash
       working-directory: formatter_lib
       
@@ -28,6 +34,8 @@ jobs:
       run: |
         cmake -H. -B_build
         cmake --build _build
+		mv _build formatter_ex_lib_build
+        mv formatter_ex_lib_build ../artifacts
       shell: bash
       working-directory: formatter_ex_lib
       
@@ -35,6 +43,8 @@ jobs:
       run: |
         cmake -H. -B_build
         cmake --build _build
+        mv _build hello_world_build
+        mv hello_world_build ../artifacts
       shell: bash
       working-directory: hello_world_application
       
@@ -42,6 +52,8 @@ jobs:
       run: |
         cmake -H. -B_build
         cmake --build _build
+        mv _build solver_lib_build
+        mv solver_lib_build ../artifacts
       shell: bash
       working-directory: solver_lib
       
@@ -49,5 +61,12 @@ jobs:
       run: |
         cmake -H. -B_build
         cmake --build _build
+        mv _build solver_app_build
+        mv solver_app_build ../artifacts
       shell: bash
       working-directory: solver_application
+      
+    - name: Push artifacts into repo
+      uses: actions/upload-artifact@v3
+      with:
+      	path: artifacts
